WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126549
REGRESSION(
r157851
): trailing space inside an editable region could be erroneously collapsed
https://bugs.webkit.org/show_bug.cgi?id=126549
Summary
REGRESSION(r157851): trailing space inside an editable region could be errone...
Ryosuke Niwa
Reported
2014-01-06 16:59:38 PST
Created
attachment 220472
[details]
Reproduction After
http://trac.webkit.org/changeset/157851
, a collapsed space at the end of a line that contains another space could disappear upon input of another character immediately after it. <
rdar://problem/15398575
>
Attachments
Reproduction
(710 bytes, text/html)
2014-01-06 16:59 PST
,
Ryosuke Niwa
no flags
Details
Patch
(7.08 KB, patch)
2014-01-06 20:53 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.12 KB, patch)
2014-01-06 21:27 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2014-01-06 20:53:33 PST
Created
attachment 220487
[details]
Patch
Ryosuke Niwa
Comment 2
2014-01-06 21:27:02 PST
Created
attachment 220490
[details]
Patch for landing
WebKit Commit Bot
Comment 3
2014-01-06 21:36:53 PST
Comment on
attachment 220490
[details]
Patch for landing Clearing flags on attachment: 220490 Committed
r161404
: <
http://trac.webkit.org/changeset/161404
>
WebKit Commit Bot
Comment 4
2014-01-06 21:36:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug