REGRESSION(r157851): trailing space inside an editable region could be erroneously collapsed https://bugs.webkit.org/show_bug.cgi?id=126549

Reviewed by Sam Weinig.

Source/WebCore:

The regression was caused by erroneous use of m_currentCharacterIsSpace in place of m_currentCharacterIsWS.

See the following two lines before the refactoring:
http://trac.webkit.org/browser/trunk/Source/WebCore/rendering/RenderBlockLineLayout.cpp?rev=157850#L3074
http://trac.webkit.org/browser/trunk/Source/WebCore/rendering/RenderBlockLineLayout.cpp?rev=157850#L3198

I've also cross-checked other places where m_currentCharacterIsSpace and m_currentCharacterIsWS are used.

Test: editing/inserting/inserting-trailing-space-and-letter.html

* rendering/line/BreakingContextInlineHeaders.h:
(WebCore::BreakingContext::handleText):

LayoutTests:

Added a regression test and reverted the erroneous rebaseline in r157851.

* editing/inserting/inserting-trailing-space-and-letter-expected.html: Added.
* editing/inserting/inserting-trailing-space-and-letter.html: Added.
* platform/mac/editing/selection/after-line-wrap-expected.txt:


Canonical link: https://commits.webkit.org/144456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161404 268f45cc-cd09-0410-ab3c-d52691b4dbfc